// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderContainer test snapshot test logined, there is currentUser 1`] = `
<div>
  <Header
    currentUser="g1"
    dropdownOpen={false}
    isLoggedIn={false}
    onLogout={[Function]}
    toggle={[Function]}
  />
</div>
`;

exports[`HeaderContainer test snapshot test no currentUser 1`] = `
<div>
  <Header
    currentUser=""
    dropdownOpen={false}
    isLoggedIn={false}
    onLogout={[Function]}
    toggle={[Function]}
  />
</div>
`;

exports[`HeaderContainer test snapshot test when login page, no currentUser 1`] = `<div />`;

exports[`HeaderContainer test snapshot test when register page, no currentUser 1`] = `<div />`;
